css: fix broken truncation in sidebar_nav due to display:table

--- a/adhocracy/enquete_theme/index_files/style_custom.css
+++ b/adhocracy/enquete_theme/index_files/style_custom.css
@@ -84,7 +84,6 @@ padding-bottom: 15px;
 }
 
 #main .page_margins {
-  display:table; 
   border-collapse:collapse; 
 }
 #main .page_wrapper {
